--- a/payment.html
+++ b/payment.html
@@ -3,11 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-
-	<a rel="payment.hml">
+	<title>feuter/payment</title>
 </head>
 <body>
 	
 </body>
-</html>
+</html> 
